--- a/MonkeySeeMonkeyDo/appsettings.json
+++ b/MonkeySeeMonkeyDo/appsettings.json
@@ -1,4 +1,7 @@
 {
+  "ConnectionStrings": {
+    "MonkeySeeMonkeyDoDB" : ""
+  },
   "Logging": {
     "LogLevel": {
       "Default": "Information",
