--- a/MonkeySeeMonkeyDo/appsettings.json
+++ b/MonkeySeeMonkeyDo/appsettings.json
@@ -1,6 +1,6 @@
 {
   "ConnectionStrings": {
-    "MonkeySeeMonkeyDoDB" : ""
+    "MonkeySeeMonkeyDoDB": "mongodb+srv://Group:MonkeySeeMonkeyDo@monkeyseemonkeydo.ctse6.mongodb.net/test?authSource=admin&replicaSet=atlas-z1cgr6-shard-0&readPreference=primary&appname=MongoDB%20Compass&ssl=true"
   },
   "Logging": {
     "LogLevel": {
