--- a/MonkeySeeMonkeyDo/MonkeySeeMonkeyDo.csproj
+++ b/MonkeySeeMonkeyDo/MonkeySeeMonkeyDo.csproj
@@ -5,6 +5,7 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="Microsoft.VisualStudio.Web.CodeGeneration.Design" Version="5.0.2" />
     <PackageReference Include="MongoDB.Driver" Version="2.9.1" />
   </ItemGroup>
 
